Changed Alignment issues

--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ li a:hover {
 
 .pdf {
   width: 100%;
-  height: 1000px
+  height: 138em;
 }
 
 .link a:hover {
